--- a/style/style.css
+++ b/style/style.css
@@ -716,26 +716,29 @@ section:nth-of-type(3) #gallery .mix .button:hover {
   background: #e31b6d;
   color: #fff;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(8) .card {
   background: url("../img/project-1.jpg") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
   background: url("../img/project-2.jpg") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
   background: url("../img/project-3.png") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
   background: url("../img/project-4.jpg") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
   background: url("../img/project-5.jpg") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
   background: url("../img/project-6.jpg") center center/cover;
 }
-section:nth-of-type(3) #gallery .mix:nth-child(1) .card {
+section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
   background: url("../img/project-7.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(1) .card {
+  background: url("../img/project-8.jpg") center center/cover;
 }
 
 section:nth-of-type(3) #gallery .mix .card {
